--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -28,6 +28,8 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      ODC_USERNAME: ${{ secrets.ODC_USERNAME }}
+      ODC_PW: ${{ secrets.ODC_PW }}
 
     steps:
       - uses: actions/checkout@v4
