--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      ODC_USERNAME: ${{ secrets.ODC_USERNAME }}
+      ODC_PW: ${{ secrets.ODC_PW }}
 
     steps:
       - uses: actions/checkout@v4
